Fix quote source and yourquote is too long error

--- a/less/app.less
+++ b/less/app.less
@@ -536,6 +536,7 @@ header {
 	}
 
 	.logo-wrapper {
+		pointer-events: none;
 		position: absolute;
 		width: 100%;
 		z-index: 100;
